# funktions

./: .gitignore  CMakeLists.txt  LICENSE  README.md  azure-pipelines.yml
examples/: CMakeLists.txt  device_validation.cpp
include/funktions/: all.h  chain.h  fnwrapper.h  logical.h  predicates.h
tests/: CMakeLists.txt  chain_test.cpp  fnwrapper_test.cpp  logical_test.cpp  main.cpp  predicates_test.cpp
